# GeoWizard

./: .gitignore  CLAUDE.md  pyproject.toml
bini/: bilateral_normal_integration_numpy.py
